--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -59,11 +59,42 @@
             margin-bottom: 40px;
             font-size: 28px;
         }
+        .btn-blue {
+            background-color: #007bff;
+            color: white;
+            padding: 10px 18px;
+            border: none;
+            border-radius: 5px;
+            text-decoration: none;
+            font-weight: bold;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        
+        .btn-blue:hover {
+            background-color: #0056b3;
+        }
+        .logout-btn {
+            background-color: #d32f2f;
+            color: white;
+            padding: 10px 18px;
+            border: none;
+            border-radius: 5px;
+            text-decoration: none;
+            font-weight: bold;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        .btn:hover {
+            opacity: 0.9;
+        }
+        
     </style>
 </head>
 <body>
     <h1><center>Available Halls</center></h1>
-    <a href="/my-bookings" class="btn btn-info" style="float: right; margin-bottom: 20px;">My Bookings</a>
+    <a href="/my-bookings" class="btn-blue" style="float: right; margin-bottom: 20px;">My Bookings</a>
+    <a th:href="@{/req/login}" class="logout-btn" style="float: right; margin-bottom: 60px; margin-right: 10px;">Logout</a>
 
     <div th:each="hall, stat : ${halls}" class="hall-card">
         <img th:src="@{'/images/hall' + ${stat.index + 1} + '.jpg'}" alt="Hall Image">
