--- a/demo/src/main/resources/templates/login.html
+++ b/demo/src/main/resources/templates/login.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" >
 <head>
@@ -8,24 +9,38 @@
   <link rel="stylesheet" href="/css/style.css">
   <script src="/js/signup.js" defer></script>
 </head>
-<body>
+
 <body>
     <section>
-        
+        <div class="logo-container" style="text-align: center; margin-bottom: 20px;">
+            <img src="/images/hall1.jpg" alt="Logo" style="width: 120px; height: auto;">
+            <h1>University of Sri Jayewardenepura</h1>
+            <h1> Hall Booking System</h1>
+          </div>
         <form action="/req/login" method="post">
-            <h1>Login</h1>
-            <div class="dialog-row">
-                <label th:if="${param.error}" th:text="${session['SPRING_SECURITY_LAST_EXCEPTION'].message}" class="text-center redText"></label>                   
-            </div>
+            
+            
+              
             <div class="inputbox">
+                <label for="">Username</label>
                 <ion-icon name="email-outline"></ion-icon>
                 <input name="username" id="username"type="name" required>
-                <label for="">username</label>
+                
+               
+               
             </div>
             <div class="inputbox">
-                <ion-icon name="lock-closed-outline"></ion-icon>
-                <input name="password" type="password" id="password" required>
+                
                 <label for="">Password</label>
+                
+                <input name="password" type="password" id="password" required>
+                
+              
+                
+            </div>
+
+            <div class="dialog-row">
+                <label th:if="${param.error}" th:text="${session['SPRING_SECURITY_LAST_EXCEPTION'].message}" class="text-center redText"></label>                   
             </div>
             <div class="register">
                 <p><a href="#">Forget Password ?</a></p>
@@ -38,3 +53,4 @@
     </section>
 </body>
   
+</html>
