--- a/demo/src/main/resources/templates/signup.html
+++ b/demo/src/main/resources/templates/signup.html
@@ -7,6 +7,7 @@
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   <link rel="stylesheet" href="/css/style.css">
   <script src="/js/signup.js" defer></script>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
   <section>
@@ -24,7 +25,8 @@
         </div>
         
         <div class="inputbox">
-            <ion-icon name="lock-closed-outline"></ion-icon>
+           
+          <ion-icon name="lock-closed-outline"></ion-icon>
             <input type="password" id="password" name="password" required>
             <label for="">Password</label>
         </div>  
