--- a/demo/src/main/resources/templates/login.html
+++ b/demo/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
 <body>
     <section>
         <div class="logo-container" style="text-align: center; margin-bottom: 20px;">
-            <img src="/images/hall1.jpg" alt="Logo" style="width: 120px; height: auto;">
+            <img src="usjp-logo.png" alt="Logo" style="width: 120px; height: auto;">
             <h1>University of Sri Jayewardenepura</h1>
             <h1> Hall Booking System</h1>
           </div>
