--- a/demo/src/main/resources/templates/admin-booking.html
+++ b/demo/src/main/resources/templates/admin-booking.html
@@ -83,10 +83,18 @@
         .btn-logout:hover {
             background-color: #b71c1c;
         }
+        .top-right-logo {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            max-width: 280px;
+            height: auto;
+            z-index: 1000;
+          }
     </style>
 </head>
 <body>
-
+    <img th:src="@{/images/logo.png}" alt="University Logo" class="top-right-logo">
 <h1>All Bookings</h1>
 
 <table>
